fix: заменяет z-index у footer

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -8,6 +8,8 @@
 
   background-color: $color-default-black-40;
 
+  z-index: 2;
+
   &__text {
     color: $color-default-white;
     font-size: 20px;
